test/zinc_source/compile_errors/callables/15_channel_async_callable.zn
// expected-error: async functions cannot be used as callable values
async helper(x) {
    return x + 1
}

fn main() {
    jobs = chan()
    jobs <- helper
}
